# sonegx-video-player

./: .gitmodules  .old.qml.kate-swp  CMakeLists.txt  aes.cpp  aes.h  images.qrc  jsonfile.cpp  jsonfile.h  main.cpp  main.qml  mpvobject.cpp  mpvobject.h  old.qml  qml.qrc  sonegx-video-player.desktop
qml/: Style.qml  main.qml
qml/controls/: CustomAppButton.qml  CustomCircularButton.qml  CustomSwitch.qml  LeftButton.qml  MenuButton.qml  PRec.qml  ReactTmp.qml  TopBarButton.qml
qml/themes/: Theme.qml  Theme1.qml  Theme2.qml
